--- a/src/views/business.ejs
+++ b/src/views/business.ejs
@@ -213,6 +213,9 @@
                                         <a href="#" class="dropdown-item" onclick="exportBusinessOrders('json')">
                                             <i class="fas fa-file-code"></i> Export to JSON
                                         </a>
+                                        <a href="#" class="dropdown-item" onclick="exportBusinessOrders('pdf')">
+                                            <i class="fas fa-file-pdf"></i> Export to PDF
+                                        </a>
                                     </div>
                                 </div>
                                 <a href="/orders?business=<%= business.business_id %>" class="btn btn-primary">
@@ -1389,6 +1392,7 @@
     function exportBusinessOrders(format = 'csv') {
         const queryParams = new URLSearchParams({
             business_id: '<%= business.business_id %>',
+            userId: '<%= userId %>',
             format: format
         });
         
